--- a/icon-manager/icon-manager.csproj
+++ b/icon-manager/icon-manager.csproj
@@ -7,4 +7,8 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.22.2.2" />
+    </ItemGroup>
+
 </Project>
