--- a/icon-manager/icon-manager.csproj
+++ b/icon-manager/icon-manager.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="ini.net" Version="1.1.0" />
       <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.22.2.2" />
     </ItemGroup>
 
